fix top bar overflow during scrolling table - second try

--- a/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel.module.scss
@@ -8,18 +8,17 @@
 
 .container {
   position: fixed;
-  top: 100px;
   bottom: 0;
   left: variables.$width-size-menu;
   z-index: 1000;
   width: calc(100% - variables.$width-size-menu);
-  height: calc(100vh - 160px);
+  height: 87vh;
   background: colors.$white;
   border-radius: 15px 15px 0 0;
   box-shadow: 0 0 22px rgba(colors.$dark-blue-900, 12%);
 }
 
 .tableContainer {
-  height: 100%;
+  height: calc(100% - 64px);
   overflow: scroll;
 }
